Changed all stab_func to stab_func_matrix

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
     "include(\"../shared/newton_new.jl\") #Newton function\n",
     "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
     "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"../shared/stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
+    "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to find the stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values"
    ]
   },
@@ -133,7 +133,7 @@
    "id": "df5682d6",
    "metadata": {},
    "source": [
-    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past. For this example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func ``` has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of one equilibrium point:"
+    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past. For this example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of one equilibrium point:"
    ]
   },
   {
@@ -154,7 +154,7 @@
    ],
    "source": [
     "#stability of an equilibrium point\n",
-    "stab_func(mackeyglassfunc,mackeytau, [x0], [0.4],[gamma,beta,n,tau], [4], nd, doprint=1)"
+    "stab_func_matrix(mackeyglassfunc,mackeytau, [x0], [0.4],[gamma,beta,n,tau], [4], nd, doprint=1)"
    ]
   },
   {
@@ -194,7 +194,7 @@
     "stab=fill(NaN,neq)\n",
     "\n",
     "for i in 2:neq\n",
-    "    stab[i]=stab_func(mackeyglassfunc,mackeytau,xlist1[i],[plist1[i]],[beta, gamma,n,tau],[4],nd,doprint=0,m=m)[1] #returns stability of each equilibirum point (1=stable,0=unstable)\n",
+    "    stab[i]=stab_func_matrix(mackeyglassfunc,mackeytau,xlist1[i],[plist1[i]],[beta, gamma,n,tau],[4],nd,doprint=0,m=m)[1] #returns stability of each equilibirum point (1=stable,0=unstable)\n",
     "end\n",
     "\n",
     "stab[1]=1.0 #NOTE THIS IS AN EDUCATED GUESS FOR NOW - Need to make my stability function work for it (currently have m/tau=m/0 in stability function for i=1)\n",
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "955dd959",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "eca4eb12",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "#Initial guess for tau for Hopf bifurcation using stab_func\n",
+    "#Initial guess for tau for Hopf bifurcation using stab_func_matrix\n",
     "hopf_indx=findfirst(isequal(0.0), stab) #finds index of initial parameter guess\n",
     "p_hopf_est=plist1[hopf_indx] #initial guess for τ for Hopf bifurcation"
    ]
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "514a1fb6",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "45319c48",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "8e811512",
    "metadata": {},
    "outputs": [
@@ -378,21 +378,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated τ value for Hopf bifurcation using large matrix stability (stab_func) is: 0.49000000000000027\n",
+      "The estimated τ value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: 0.49000000000000027\n",
       "The estimated τ value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: 0.48000000000000026\n",
       "The true τ value for hopf bifurcation: 0.47081962953876083\n"
      ]
     }
    ],
    "source": [
-    "println(\"The estimated τ value for Hopf bifurcation using large matrix stability (stab_func) is: $p_hopf_est\")\n",
+    "println(\"The estimated τ value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: $p_hopf_est\")\n",
     "println(\"The estimated τ value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: $p_hopf_biest\")\n",
     "println(\"The true τ value for hopf bifurcation: $tau_hopf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "0d2e7b31",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
