--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -13,7 +13,7 @@
    "id": "d24de573",
    "metadata": {},
    "source": [
-    "The parameters: `τ`=sqrt(2)/4 and b=1.5 (fixed). Parameter 'a' is varied."
+    "The parameters: `τ`=$\\frac{\\sqrt2}{4}$ and $b=1.5$ (fixed). Parameter $a$ is varied."
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "af26b77b",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
     "include(\"../shared/newton_new.jl\") #Newton function\n",
     "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
     "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"../shared/stab_func.jl\") #finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
+    "include(\"../shared/stab_func_matrix.jl\") #uses large matrix method to find the stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\") #finds initial guess for Hopf information and creates a function that can find the true Hopf values\n",
     "include(\"../shared/create_foldfunc.jl\") #finds initial guess for fold information and creates a function that can find the true fold values"
    ]
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "fb745fe6",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "8a3ff49e",
    "metadata": {},
    "outputs": [
@@ -166,12 +166,12 @@
    "id": "80d0e027",
    "metadata": {},
    "source": [
-    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past. For this example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func ``` has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of all the equilibria and plot them:"
+    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past. For this example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of all the equilibria and plot them:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "89f9557e",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
     "stab=fill(NaN,neq)\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab[i]=stab_func(invpend_1delay,inpend1tau,xlist[i],[plist[i]],[a,b,tau],[1],nd,doprint=0) #returns stability of the equilibiria (Outputs 1 for stable and 0 for unstable)\n",
+    "    stab[i]=stab_func_matrix(invpend_1delay,inpend1tau,xlist[i],[plist[i]],[a,b,tau],[1],nd,doprint=0) #returns stability of the equilibiria (Outputs 1 for stable and 0 for unstable)\n",
     "end \n",
     "\n",
     "stable=(stab.==1.0)#highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "d0d84ae2",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "85cc51f2",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "#Hopf parameter guess from stab_func\n",
+    "#Hopf parameter guess from stab_func_matrix\n",
     "stab_indx=findfirst(isequal(1.0),stab)#finds where stability changes first time\n",
     "unstab2_indx=findfirst(isequal(0.0),stab[stab_indx+1:end]) #finds where stability changes again\n",
     "hopf_indx=stab_indx+unstab2_indx #index of the initial guess where hopf bifurcation is\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "63698f8f",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "82d4c7ef",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "id": "f7b79d77",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
@@ -505,12 +505,12 @@
    "id": "80d37037",
    "metadata": {},
    "source": [
-    "We'll now look at the behaviour of the bifurcation points for τ=sqrt(2):"
+    "We'll now look at the behaviour of the bifurcation points for τ=$\\sqrt2$:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "74d1d50f",
    "metadata": {},
    "outputs": [
@@ -540,14 +540,14 @@
       "    @ C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\lu.jl:341 [inlined]\n",
       "  [9] \\(A::Matrix{Float64}, B::Vector{Float64})\n",
       "    @ LinearAlgebra C:\\Users\\ems237\\.julia\\juliaup\\julia-1.11.6+0.x64.w64.mingw32\\share\\julia\\stdlib\\v1.11\\LinearAlgebra\\src\\generic.jl:1132\n",
-      " [10] newton_new(f::var\"#292#296\"{var\"#fhopf#308\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#307\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, x0::Vector{Float64}; h::Float64, df::var\"#278#280\"{var\"#292#296\"{var\"#fhopf#308\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#307\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, Float64}, tol::Float64, maxit::Int64)\n",
+      " [10] newton_new(f::var\"#30#34\"{var\"#fhopf#46\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#45\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, x0::Vector{Float64}; h::Float64, df::var\"#16#18\"{var\"#30#34\"{var\"#fhopf#46\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#45\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Vector{Float64}}, Float64}, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\shared\\newton_new.jl:15\n",
       " [11] newton_new(f::Function, x0::Vector{Float64})\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\shared\\newton_new.jl:2\n",
-      " [12] track_curve_new(userf::var\"#fhopf#308\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#307\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#294#298\"{var\"#fhopf#308\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#307\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
+      " [12] track_curve_new(userf::var\"#fhopf#46\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#45\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, y0::Vector{Float64}, ytan::Vector{Float64}; h::Float64, userdf::var\"#32#36\"{var\"#fhopf#46\"{typeof(invpend_1delay), typeof(inpend1tau), Vector{Float64}, Vector{Int64}, Int64, Vector{Float64}, Vector{Float64}, var\"#df#45\"{typeof(invpend_1delay), Vector{Float64}, Vector{Int64}, Int64}, Matrix{Float64}, Int64}, Float64}, nmax::Int64, stepsize::Float64, tol::Float64, maxit::Int64)\n",
       "    @ Main c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\shared\\track_curve_new.jl:32\n",
       " [13] top-level scope\n",
-      "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X33sZmlsZQ==.jl:3"
+      "    @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X40sZmlsZQ==.jl:3"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "614d4f23",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
     "stab2=fill(NaN,neq2)\n",
     "\n",
     "for i in 1:neq2\n",
-    "    stab2[i]=stab_func(invpend_1delay,inpend1tau,xlist111[i],[plist111[i]],[a,b,tau_trial2],[1],nd,doprint=0)\n",
+    "    stab2[i]=stab_func_matrix(invpend_1delay,inpend1tau,xlist111[i],[plist111[i]],[a,b,tau_trial2],[1],nd,doprint=0)\n",
     "end \n",
     "\n",
     "\n",
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "cdc8634d",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X45sZmlsZQ==.jl:2"
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X42sZmlsZQ==.jl:2"
      ]
     }
    ],
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "c0732f12",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
       " [1] include(fname::String)\n",
       "   @ Main .\\sysimg.jl:38\n",
       " [2] top-level scope\n",
-      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X36sZmlsZQ==.jl:1"
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X43sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "7fc15129",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X40sZmlsZQ==.jl:1"
+      "   @ c:\\Users\\ems237\\OneDrive - University of Exeter\\2025 Summer Internship\\DDE-internship-code\\Single_delayed_inverted_pendulum_demo\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X44sZmlsZQ==.jl:1"
      ]
     }
    ],
