--- a/Neuron_demo/Neuron_example.ipynb
+++ b/Neuron_demo/Neuron_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "a584c15a",
    "metadata": {},
    "outputs": [
@@ -57,20 +57,20 @@
     "include(\"../shared/newton_new.jl\") #Newton function\n",
     "include(\"../shared/create_ststfunc.jl\") #Initialisates a function to find equilibria \n",
     "include(\"../shared/track_curve_new.jl\") #Tracking curve function (used for continuation and equilibria branches)\n",
-    "include(\"../shared/stab_func.jl\")#finds stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
+    "include(\"../shared/stab_func_matrix.jl\")#uses large matrix method to find stability and eigenvalues (and eigenvector and ω is interested in Hopf bifurcation)\n",
     "include(\"../shared/create_hopffunc.jl\")#finds initial guess for Hopf information and creates a function that can find the true Hopf values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "9fc884f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.0, 0.0, 2.34], var\"#f_equilibrium#25\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
+       "([0.0, 0.0, 2.34], var\"#f_equilibrium#93\"{Int64, typeof(neuronfunc), Vector{Float64}, Int64, Int64}(4, Main.neuronfunc, [0.5, -1.0, 1.0, 2.34, 0.2, 0.2, 1.5], 3, 2))"
       ]
      },
      "metadata": {},
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "23a36df6",
    "metadata": {},
    "outputs": [
@@ -129,12 +129,12 @@
    "id": "7c7f7c1a",
    "metadata": {},
    "source": [
-    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past. For this example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func ``` has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of one equilibrium point:"
+    "Finding the stability of equilibiria of DDEs is more complex than finding the stability of equilibria of ODEs due to the infinite dimensional past. For this example the stability was found by using a large matrix that can be used to create a finite-dimensional system that can approximate the stability of the equilibria. The function ``` stab_func_matrix ``` has a first output of 1 is the equilibrium point if stable and has 0 if it is unstable. Below we find the stability of one equilibrium point:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "5f278333",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
     "#Test stability of initial point (it should be unstable)\n",
     "x0=y01[1:2]\n",
     "p0=y01[3]\n",
-    "stabi,eigvalsi,eigvecs1=stab_func(neuronfunc,neurontau,x0,[p0],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1)\n",
+    "stabi,eigvalsi,eigvecs1=stab_func_matrix(neuronfunc,neurontau,x0,[p0],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1)\n",
     "unstabindx=findfirst(isequal(1),real(eigvalsi).>0)\n",
     "unstabeigi=eigvalsi[unstabindx]\n",
     "\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "a1951fbd",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
     "eigvals1=[fill(0.0+0.0*im,n*(1+nd*m)) for _ in 1:neq]\n",
     "\n",
     "for i in 1:neq\n",
-    "    stab[i],eigvals1[i],=stab_func(neuronfunc,neurontau,xlist1[i],[plist1[i]],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m) #outputs the stability (1 for stable, 0 for unstable) and also gives the eigenvalues for each point\n",
+    "    stab[i],eigvals1[i],=stab_func_matrix(neuronfunc,neurontau,xlist1[i],[plist1[i]],[k,beta,a12,a21,tau1,tau2,taus],[4],nd,doprint=1,m=m) #outputs the stability (1 for stable, 0 for unstable) and also gives the eigenvalues for each point\n",
     "end\n",
     "\n",
     "stable=(stab.==1.0) #highlights indices of stable points (indicated by a 1 in stable vector)\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "ea4aa717",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "e08cf059",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "ffd8cae6",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "b3c85975",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "85dfe439",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "b30a8b29",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "b8906377",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated a21 value for Hopf bifurcation using large matrix stability (stab_func) is: 0.8400000000000005\n",
+      "The estimated a21 value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: 0.8400000000000005\n",
       "The estimated a21 value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: 0.8100000000000005\n",
       "True Hopf a21 value is: 0.8071232251830747\n"
      ]
@@ -475,7 +475,7 @@
     "unstab_biindx=findfirst(isequal(0.0),stab_bi) #finds index of Hopf bifurcation\n",
     "a21unstabbi=plist1[unstab_biindx] #finds initial guess for parameter a21 value for a Hopf bifurcation\n",
     "\n",
-    "println(\"The estimated a21 value for Hopf bifurcation using large matrix stability (stab_func) is: $a21unstab\")\n",
+    "println(\"The estimated a21 value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: $a21unstab\")\n",
     "println(\"The estimated a21 value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: $a21unstabbi\")\n",
     "println(\"True Hopf a21 value is: $a_hopf\")"
    ]
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "66b25617",
    "metadata": {},
    "outputs": [
