--- a/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
+++ b/Single_delayed_inverted_pendulum_demo/Single_delayed_inverted_pendulum_example.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "id": "af26b77b",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "id": "fb745fe6",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "id": "8a3ff49e",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "id": "89f9557e",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "id": "d0d84ae2",
    "metadata": {},
    "outputs": [
@@ -296,8 +296,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "672d1510",
+   "metadata": {},
+   "source": [
+    "First we'll find the parameter $a$ value for the Hopf bifurcation using the large matrix stability finding method (```stab_func_matrix```). The code for this is given below:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "id": "85cc51f2",
    "metadata": {},
    "outputs": [
@@ -321,31 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "63698f8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5999999999999672"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#Hopf parameter guess from stab_func_bi \n",
-    "stab_biindx=findfirst(isequal(1.0),stab_bi)#finds where stability changes first time\n",
-    "unstab2_biindx=findfirst(isequal(0.0),stab_bi[stab_biindx+1:end]) #finds where stability changes again\n",
-    "hopf_biindx=stab_biindx+unstab2_biindx #index of the initial guess where hopf bifurcation is\n",
-    "plist[hopf_biindx] #parameter guess for hopf bifurcation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "id": "d2d0e31f",
    "metadata": {},
    "outputs": [
@@ -376,6 +360,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ca6cd38",
+   "metadata": {},
+   "source": [
+    "Next we'll find the parameter $a$ value for the Hopf bifurcation using the barycentric interpolation stability finding method (```stab_func_bi```). The code for this is given below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "a9c1b7c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5999999999999672"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Hopf parameter guess from stab_func_bi \n",
+    "stab_biindx=findfirst(isequal(1.0),stab_bi)#finds where stability changes first time\n",
+    "unstab2_biindx=findfirst(isequal(0.0),stab_bi[stab_biindx+1:end]) #finds where stability changes again\n",
+    "hopf_biindx=stab_biindx+unstab2_biindx #index of the initial guess where hopf bifurcation is\n",
+    "plist[hopf_biindx] #parameter guess for hopf bifurcation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f0adaab9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The initial guess for Hopf info: [0.0, 0.0, 0.0005747377307667911, 0.8842285258693483, -0.4670541550135916, 0.0, 1.8932005580379014, 3.5999999999999672]\n",
+      "The true information for the Hopf bifurcation: [0.0, 0.0, 0.00012559785442754182, 0.8840075049253543, -0.4674726291985516, 0.00023751004653859876, 1.8910358590211407, 3.5908064152889514]\n",
+      "converged?: true\n",
+      "The a value for hopf bifurcation: 3.5908064152889514\n",
+      "The ω value for hopf bifurcation: 1.8910358590211407\n"
+     ]
+    }
+   ],
+   "source": [
+    "yh02,fhopf2=create_hopffunc(invpend_1delay,inpend1tau,[a,b,tau],xlist[hopf_biindx],[plist[hopf_biindx]],[1],nd,stabtype=\"bi\",N_num=20) #outputs initial guess of the Hopf bifurcation (including x, ω and a estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
+    "println(\"The initial guess for Hopf info: $yh02\")\n",
+    "yh2,conv2,=newton_new(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "println(\"The true information for the Hopf bifurcation: $yh2\")\n",
+    "println(\"converged?: $conv2\")\n",
+    "a_2hopf=yh2[end]\n",
+    "om_2hopf=yh2[end-1]\n",
+    "x_2hopf=yh2[1]\n",
+    "println(\"The a value for hopf bifurcation: $a_2hopf\")\n",
+    "println(\"The ω value for hopf bifurcation: $om_2hopf\") #1.8910.. which is about 0.6π"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3780ce90",
    "metadata": {},
    "source": [
@@ -383,8 +430,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a584072",
+   "metadata": {},
+   "source": [
+    "The code below finds the parameter value of $a$ such that an eigenvalue $\\lambda=0$ exists, using the large matrix stability method (```stab_func_matrix```) to get the eigenvalues and eigenvectors."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "id": "82d4c7ef",
    "metadata": {},
    "outputs": [
@@ -409,8 +464,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60e6baed",
+   "metadata": {},
+   "source": [
+    "The code below finds the parameter value of $a$ such that an eigenvalue $\\lambda=0$ exists, using the barycentric interpolation stability method (```stab_func_bi```) to get the eigenvalues and eigenvectors."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
+   "id": "db6b861b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The information for the fold bifurcation: [0.0, 0.0, -1.0, 1.4048881208854974e-25, 0.0, 0.0, 0.9999999999833333]\n",
+      "The value of 'a' that a fold occurs at is: 0.9999999999833333\n"
+     ]
+    }
+   ],
+   "source": [
+    "y0f2,ffold2=create_foldfunc(invpend_1delay,inpend1tau,[a,b,tau],[0.0,0],[1.4],[1],1,stabtype=\"bi\",N_num=20) #returns initial guess for the fold parameters and a function that contains the formula for finding a fold\n",
+    "yff2,convf2,=newton_new(ffold2,y0f2) #finds value of a for fold for fixed b=1.5\n",
+    "\n",
+    "a_2fold=yff2[end]\n",
+    "x_2fold=yff2[1]\n",
+    "\n",
+    "println(\"The information for the fold bifurcation: $yff2\")\n",
+    "println(\"The value of 'a' that a fold occurs at is: $a_2fold\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "f7b79d77",
    "metadata": {},
    "outputs": [
@@ -463,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "id": "b7a8a5dc",
    "metadata": {},
    "outputs": [
