Added hopf function example when using stab_func_bi function

--- a/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
+++ b/Mackey-Glass_demo/Mackey-Glass_equation_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "fab8d0a2",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "be5d4b96",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "b6ab8081",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "3cc0add2",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "eb2591f3",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "955dd959",
    "metadata": {},
    "outputs": [
@@ -286,8 +286,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eeaec415",
+   "metadata": {},
+   "source": [
+    "First we'll find the delay $\\tau$ for the Hopf bifurcation using the large matrix stability finding method (```stab_func_matrix```). The code for this is given below:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "eca4eb12",
    "metadata": {},
    "outputs": [
@@ -317,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "id": "514a1fb6",
    "metadata": {},
    "outputs": [
@@ -347,8 +355,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b1ebc86",
+   "metadata": {},
+   "source": [
+    "Next we'll find the delay $\\tau$ for the Hopf bifurcation using the barycentric interpolation stability finding method (```stab_func_bi```). The code for this is given below:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "id": "45319c48",
    "metadata": {},
    "outputs": [
@@ -370,7 +386,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
+   "id": "9b51b5f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The initial guess for Hopf info: [1.0, 1.0, 0.0, 3.7609569268519016, 0.49000000000000027]\n",
+      "The true information for the Hopf bifurcation: [1.0, 1.0, 0.0, 3.8729833418311497, 0.47081962953876083]\n",
+      "converged?: true\n",
+      "The τ value for hopf bifurcation: 0.47081962953876083\n",
+      "The ω value for hopf bifurcation: 3.8729833418311497\n"
+     ]
+    }
+   ],
+   "source": [
+    "yh02,fhopf2=create_hopffunc(mackeyglassfunc,mackeytau,[beta,gamma,n,tau],xlist1[hopf_indx],[plist1[hopf_indx]],[4],nd,stabtype=\"bi\",N_num=20) #outputs initial guess of the Hopf bifurcation (including x, ω and τ estimates) and a function that contians the method/formula to find the Hopf bifurcation\n",
+    "println(\"The initial guess for Hopf info: $yh02\")\n",
+    "yh2,conv2,=newton_new(fhopf2,yh02) #putting initial guess and Hopf function into newton we get the true parameter values and information for the Hopf bifurcation\n",
+    "println(\"The true information for the Hopf bifurcation: $yh2\")\n",
+    "println(\"converged?: $conv2\")\n",
+    "tau_2hopf=yh2[end]\n",
+    "om_2hopf=yh2[end-1]\n",
+    "x_2hopf=yh2[1]\n",
+    "println(\"The τ value for hopf bifurcation: $tau_2hopf\")\n",
+    "println(\"The ω value for hopf bifurcation: $om_2hopf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "8e811512",
    "metadata": {},
    "outputs": [
@@ -380,19 +427,21 @@
      "text": [
       "The estimated τ value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: 0.49000000000000027\n",
       "The estimated τ value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: 0.48000000000000026\n",
-      "The true τ value for hopf bifurcation: 0.47081962953876083\n"
+      "The true τ value for hopf bifurcation when using stab_func_matrix: 0.47081962953876083\n",
+      "The true τ value for hopf bifurcation when using stab_func_matrix: 0.47081962953876083\n"
      ]
     }
    ],
    "source": [
     "println(\"The estimated τ value for Hopf bifurcation using large matrix stability (stab_func_matrix) is: $p_hopf_est\")\n",
     "println(\"The estimated τ value for Hopf bifurcation using  barycentric interpolation stability (stab_func_bi) is: $p_hopf_biest\")\n",
-    "println(\"The true τ value for hopf bifurcation: $tau_hopf\")"
+    "println(\"The true τ value for hopf bifurcation when using stab_func_matrix: $tau_hopf\")\n",
+    "println(\"The true τ value for hopf bifurcation when using stab_func_matrix: $tau_2hopf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "0d2e7b31",
    "metadata": {},
    "outputs": [
@@ -435,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "9cf1f034",
    "metadata": {},
    "outputs": [
