Added finding f'(0.5), f'(0.75) using j_eval

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 462,
    "id": "a76dd517",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 463,
    "id": "ce429145",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 464,
    "id": "c4ba9f04",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 465,
    "id": "ee242ee7",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 466,
    "id": "d85898e9",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 467,
    "id": "189d7837",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 468,
    "id": "6191924b",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 469,
    "id": "395a8643",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 470,
    "id": "616fdae5",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 471,
    "id": "9c2e66bf",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 472,
+   "id": "335a471e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " -0.47942553860419485\n",
+       " -0.6816387600233441"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Find the derivative f'(0.5), f'(0.75) for f(x)=cos(x)\n",
+    "emat# E_ij matrix for the relevant lj(xi) values\n",
+    "\n",
+    "fderivvals=emat*diffmat*fvec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c60bfb69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " -0.479425538604203\n",
+       " -0.6816387600233341"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#f'(x)=-sin(x)\n",
+    "true_derivvals=-sin.(xivals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 496,
+   "id": "f0bfe6f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " -0.8775825618967039\n",
+       " -0.7316888688668295"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Finding f''(0.5), f''(0.75) for f(x)=cos(x)\n",
+    "d2fvals=emat*diffmat*diffmat*fvec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 508,
+   "id": "83db749e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Float64}:\n",
+       " -0.8775825618903728\n",
+       " -0.7316888688738209"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#f''(x)=-cos(x)\n",
+    "true_d2fvals=-cos.(xivals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 509,
    "id": "1c718608",
    "metadata": {},
    "outputs": [
@@ -419,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 510,
    "id": "98fcc458",
    "metadata": {},
    "outputs": [
@@ -445,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 511,
    "id": "b2e37700",
    "metadata": {},
    "outputs": [
@@ -470,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 512,
    "id": "e45ea8e9",
    "metadata": {},
    "outputs": [
@@ -503,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 513,
    "id": "4183b89d",
    "metadata": {},
    "outputs": [
@@ -553,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 514,
    "id": "451b5a19",
    "metadata": {},
    "outputs": [
@@ -637,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 515,
    "id": "25d493e8",
    "metadata": {},
    "outputs": [
@@ -678,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 516,
    "id": "af703dbb",
    "metadata": {},
    "outputs": [],
@@ -705,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 517,
    "id": "cace5d36",
    "metadata": {},
    "outputs": [
@@ -743,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 518,
    "id": "3a787d2f",
    "metadata": {},
    "outputs": [
@@ -764,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 519,
    "id": "990c42d7",
    "metadata": {},
    "outputs": [
