Removed derivative example for f(x)=|x|+0.5x-x^2

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": null,
    "id": "1c718608",
    "metadata": {},
    "outputs": [
@@ -498,93 +498,9 @@
     }
    ],
    "source": [
-    "diff2mat=j_eval(xjvals,xivals,diff=2) #E matrix of lj(xi) components\n",
-    "df2xivals=diff2mat*fvec#uses barycentric interpolation formula to find p(xivals)\n",
-    "df2xivals[1:5] #would expect them to be -ve fvec"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c30995b8",
-   "metadata": {},
-   "source": [
-    "Now trialling 1st derivative function part of $f(x)=|x|+\\frac{x}{2}-x^2$:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 510,
-   "id": "98fcc458",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5-element Vector{Float64}:\n",
-       " -0.5157063488458179\n",
-       " -0.4918991218338676\n",
-       " -0.5068701711769545\n",
-       " -0.48991784996389864\n",
-       " -0.5039221545231595"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#For f(x)=|x|+0.5x-x^2\n",
-    "diffx=(j_eval(xjvals,[0.5],diff=1)*fvec2)[1:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 511,
-   "id": "b2e37700",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5-element Vector{Float64}:\n",
-       " -0.5157063488458179\n",
-       " -0.4918991218338676\n",
-       " -0.5068701711769545\n",
-       " -0.48991784996389864\n",
-       " -0.5039221545231595"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "diffx=(j_eval(xjvals,[0.5],diff=1)*fvec2)[1:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 512,
-   "id": "e45ea8e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5-element Vector{Float64}:\n",
-       " -27083.87260969328\n",
-       "   4020.86616036464\n",
-       "   1020.9894343056176\n",
-       "    446.6273926845504\n",
-       "    255.11412374146855"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "diff2=(j_eval(xjvals,[0.5],diff=2)*fvec2)[1:5]"
+    "#diff2mat=j_eval(xjvals,xivals,diff=2) #E matrix of lj(xi) components\n",
+    "#df2xivals=diff2mat*fvec#uses barycentric interpolation formula to find p(xivals)\n",
+    "#df2xivals[1:5] #would expect them to be -ve fvec"
    ]
   },
   {
