Moved 2D barycentric interpolation to bottom of document (it's not needed)

--- a/Stability_barycentric_interpolation.ipynb
+++ b/Stability_barycentric_interpolation.ipynb
@@ -238,88 +238,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "978903b4",
-   "metadata": {},
-   "source": [
-    "# 2D barycentric interpolation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b0d165a",
-   "metadata": {},
-   "source": [
-    "For now (18.08.2025), we're looking at Chebyshev points of the 2nd kind. Say we have a structured grid, for example in 2D:\n",
-    "```math\n",
-    "\\begin{align*}\n",
-    "x_i &= \\cos(\\frac{\\pi i}{n_x}) & \\text{for i=0,..., $n_x$}\\\\\n",
-    "y_j &=\\cos(\\frac{\\pi j}{n_y}) & \\text{for j=0,..., $n_y$}\n",
-    "\\end{align*}\n",
-    "```\n",
-    "And let $f_{ij}=f(x_i,y_j)$ be the function value at $(x_i,y_j)$  - i.e. $f_{ij}=f(x_i,y_j)$. Next we compute the weights $w_i^{(x)}$ for $x_i$ and the weights $w_j^{(y)}$ for $y_j$. The interpolant at a point $(x,y)$ is:\n",
-    "```math\n",
-    "p(x,y)=\\frac{\\sum_{i=0}^{n_x} \\sum_{j=0}^{n_y} \\frac{w_i^{(x)}}{x-x_i} \\cdot \\frac{w_j^{(y)}}{y-y_j} \\cdot f_{ij}}{\\sum_{i=0}^{n_x} \\frac{w_i^{(x)}}{x-x_i} \\cdot \\sum_{j=0}^{n_y} \\frac{w_j^{(y)}}{y-y_j}}\n",
-    "```\n",
-    "For ease, we assume $n_x=n_y=n$ and the function ```j_eval_multidim``` uses the following algorithm to compute $p(x,y)$ on a structured grid:\n",
-    "1. For each new $y$ we wish to evaluate at, we fix the $y$ and for each $i$, interpolate in the $y$-direction to get:\n",
-    "```math\n",
-    "g_i(y)=\\frac{\\sum_{j=0}^{n} \\frac{w_j^{(y)}}{y-y_j}f_{ij}}{\\sum_{j=0}^{n}\\frac{w_j^{(y)}}{y-y_j}}\n",
-    "``` \n",
-    "2. Then the function interpolates in $x$:\n",
-    "```math\n",
-    "p(x,y)=\\frac{\\sum_{i=0}^{n} \\frac{w_i^{(x)}}{x-x_i}g_i(y)}{\\sum_{i=0}^{n} \\frac{w_i^{(x)}}{x-x_i}}\n",
-    "```\n",
-    "Note the above algorithm can be generalised to 3+ dimensions by interpolating along one axis at a time.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 468,
-   "id": "6191924b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1-element Vector{Float64}:\n",
-       " 2.2500000000000004"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#for basic functio f(x,y)=x+y, where we want to find f(0.25,2)\n",
-    "include(\"j_eval_multidim.jl\")\n",
-    "fmat1=[2 1 0; 1 0 -1; 0 -1 -2]\n",
-    "j_eval_multidim([[1,1],[0,0],[-1.0,-1]],[[0.25,2]],fmat1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 469,
-   "id": "395a8643",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.25"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#check it against true answer\n",
-    "include(\"basic_func.jl\")\n",
-    "true_ans=basic_func(0.25,2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c7028065",
    "metadata": {},
    "source": [
@@ -804,6 +722,67 @@
     "x_hopf=yh1[1:2]\n",
     "println(\"The ω value for hopf bifurcation: $om_hopf\")\n",
     "println(\"The a21 value for hopf bifurcation: $a_hopf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "435bc6c4",
+   "metadata": {},
+   "source": [
+    "# 2D Barycentric interpolation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22c816dd",
+   "metadata": {},
+   "source": [
+    "For now (18.08.2025), we're looking at Chebyshev points of the 2nd kind. Say we have a structured grid, for example in 2D:\n",
+    "```math\n",
+    "\\begin{align*}\n",
+    "x_i &= \\cos(\\frac{\\pi i}{n_x}) & \\text{for i=0,..., $n_x$}\\\\\n",
+    "y_j &=\\cos(\\frac{\\pi j}{n_y}) & \\text{for j=0,..., $n_y$}\n",
+    "\\end{align*}\n",
+    "```\n",
+    "And let $f_{ij}=f(x_i,y_j)$ be the function value at $(x_i,y_j)$  - i.e. $f_{ij}=f(x_i,y_j)$. Next we compute the weights $w_i^{(x)}$ for $x_i$ and the weights $w_j^{(y)}$ for $y_j$. The interpolant at a point $(x,y)$ is:\n",
+    "```math\n",
+    "p(x,y)=\\frac{\\sum_{i=0}^{n_x} \\sum_{j=0}^{n_y} \\frac{w_i^{(x)}}{x-x_i} \\cdot \\frac{w_j^{(y)}}{y-y_j} \\cdot f_{ij}}{\\sum_{i=0}^{n_x} \\frac{w_i^{(x)}}{x-x_i} \\cdot \\sum_{j=0}^{n_y} \\frac{w_j^{(y)}}{y-y_j}}\n",
+    "```\n",
+    "For ease, we assume $n_x=n_y=n$ and the function ```j_eval_multidim``` uses the following algorithm to compute $p(x,y)$ on a structured grid:\n",
+    "1. For each new $y$ we wish to evaluate at, we fix the $y$ and for each $i$, interpolate in the $y$-direction to get:\n",
+    "```math\n",
+    "g_i(y)=\\frac{\\sum_{j=0}^{n} \\frac{w_j^{(y)}}{y-y_j}f_{ij}}{\\sum_{j=0}^{n}\\frac{w_j^{(y)}}{y-y_j}}\n",
+    "``` \n",
+    "2. Then the function interpolates in $x$:\n",
+    "```math\n",
+    "p(x,y)=\\frac{\\sum_{i=0}^{n} \\frac{w_i^{(x)}}{x-x_i}g_i(y)}{\\sum_{i=0}^{n} \\frac{w_i^{(x)}}{x-x_i}}\n",
+    "```\n",
+    "Note the above algorithm can be generalised to 3+ dimensions by interpolating along one axis at a time.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7866008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for basic functio f(x,y)=x+y, where we want to find f(0.25,2)\n",
+    "include(\"j_eval_multidim.jl\")\n",
+    "fmat1=[2 1 0; 1 0 -1; 0 -1 -2]\n",
+    "j_eval_multidim([[1,1],[0,0],[-1.0,-1]],[[0.25,2]],fmat1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63633f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#check it against true answer\n",
+    "include(\"basic_func.jl\")\n",
+    "true_ans=basic_func(0.25,2)"
    ]
   }
  ],
